chore(repo): test
test test test

--- a/package.json
+++ b/package.json
@@ -1,14 +1,54 @@
 {
   "name": "oh-my-repo",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "Oh my (mono) repo",
+  "author": "Stefan Lenz <www.stefan.lenz@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/steflen/oh-my-repo.git"
+  },
+  "private": true,
+  "engines": {
+    "node": ">=12",
+    "yarn": ">=1.19"
+  },
   "scripts": {
     "nx": "nx",
-    "start": "npm run postinstall.web && nx serve web-desktop",
-    "build": "npm run postinstall.web && nx build web-desktop",
+    "XXXXXXXXXXX HOOKS XXXXXXXXXXXXXXXXXXXXXXXX": "",
+    "offpreinstall": "node -e '!process.env.npm_config_user_agent.startsWith(\"yarn/\") &&! console.log(\"ONLY YARN ALLOWED!\") && process.exit(1)'",
+    "pre-build": "rimraf dist coverage",
+    "start.web.desktop": "npm run postinstall.web && nx serve web-desktop",
+    "postinstall": "electron-rebuild install-app-deps",
+    "postinstall.electron": "node tools/electron/postinstall",
+    "postinstall.web": "node tools/web/postinstall",
+    "prepare.electron.desktop": "npm run postinstall.electron && tsc -p apps/electron-desktop/tsconfig.json",
+    "XXXXXXXXXXX COMMON XXXXXXXXXXXXXXXXXXXXXXXX": "",
+    "update:all": "nx update --all",
+    "update:check": "nx update",
+    "dep-graph": "nx dep-graph",
+    "help": "nx help",
+    "XXXXXXXXXXX CLEANING XXXXXXXXXXXXXXXXXXXXXX": "",
+    "clean:nm": "rimraf node_modules",
+    "clean:dist": "rimraf dist",
+    "clean": "npx rimraf -- hooks node_modules package-lock.json && npm i",
+    "clean:nativescript-mobile": "cd apps/nativescript-mobile && npx rimraf -- hooks node_modules platforms package-lock.json && npm i && npx rimraf -- package-lock.json",
+    "XXXXXXXXXXX RELEASE XXXXXXXXXXXXXXXXXXXXXXX": "",
+    "semantic-release": "semantic-release",
+    "XXXXXXXXXXX COMMIT XXXXXXXXXXXXXXXXXXXXXXX": "",
+    "repo:commit": "git-cz",
+    "commit:init": "commitizen init cz-conventional-changelog --save-dev --save-exact",
+    "commit:update": "git update-index --again",
+    "XXXXXXXXXXX DOCUMENTATION XXXXXXXXXXXXXXXXX": "Generate documentation",
+    "docs:gen": "compodoc -p tsconfig.json -d dist/docs",
+    "docs:serve": "compodoc -s -d dist/docs",
+    "doc:build:serve": "compodoc -p tsconfig.json -d dist/docs -s",
+    "XXXXXXXXXXX TESTING XXXXXXXXXXXXXXXXXXXXXXX": "",
+    "coverage": "codecov",
     "test": "npm run postinstall.web && nx test",
-    "lint": "nx workspace-lint && nx lint",
     "e2e": "npm run postinstall.web && nx e2e",
+    "XXXXXXXXXXX AFFECTED XXXXXXXXXXXXXXXXXXXXXX": "",
+    "affected": "nx affected",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -16,34 +56,42 @@
     "affected:test": "nx affected:test",
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
-    "affected": "nx affected",
+    "XXXXXXXXXXX FORMATTING XXXXXXXXXXXXXXXXXXX": "",
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "workspace-schematic": "nx workspace-schematic",
-    "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "clean": "npx rimraf -- hooks node_modules package-lock.json && npm i",
-    "start.web.desktop": "npm run postinstall.web && nx serve web-desktop",
-    "postinstall": "electron-rebuild install-app-deps",
-    "postinstall.electron": "node tools/electron/postinstall",
-    "postinstall.web": "node tools/web/postinstall",
+    "format:check-rules": "tslint-config-prettier-check tslint.json",
+    "format:all": "prettier --write \"**/*.*(json|js|jsx|ts|tsx)\"",
+    "format:fix": "pretty-quick --staged",
+    "format:test": "prettier --list-different",
+    "XXXXXXXXXXX LINTING XXXXXXXXXXXXXXXXXXXXXX": "",
+    "lint": "nx workspace-lint && ng lint",
+    "XXXXXXXXXXX BUILD XXXXXXXXXXXXXXXXXXXXXXXXX": "",
+    "build:sb": "build-storybook",
+    "build": "npm run postinstall.web && nx build web-desktop",
     "build.electron.desktop": "npm run prepare.electron.desktop && ng build electron-desktop --prod --base-href ./",
     "build.electron.desktop.local": "npm run build.electron.desktop && electron dist/apps/electron-desktop",
     "build.electron.desktop.linux": "npm run build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --linux",
     "build.electron.desktop.windows": "npm run build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --windows",
     "build.electron.desktop.mac": "npm run build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --mac",
-    "prepare.electron.desktop": "npm run postinstall.electron && tsc -p apps/electron-desktop/tsconfig.json",
+    "XXXXXXXXXXX DEVELOPMENT XXXXXXXXXXXXXXXXXXX": "",
     "serve.electron.desktop.target": "nx serve electron-desktop",
     "serve.electron.desktop": "wait-on http-get://localhost:4200/ && electron apps/electron-desktop/src --serve",
     "start.electron.desktop": "npm run prepare.electron.desktop && npm-run-all -p serve.electron.desktop.target serve.electron.desktop",
+    "start": "npm run postinstall.web && nx serve web-desktop",
     "start.web.browser": "nx serve web-browser",
     "start.nativescript.mobile.ios": "cd apps/nativescript-mobile && tns run ios --emulator",
     "start.nativescript.mobile.android": "cd apps/nativescript-mobile && tns run android --emulator",
     "start.nativescript.mobile.preview": "cd apps/nativescript-mobile && tns preview",
-    "clean.nativescript.mobile": "cd apps/nativescript-mobile && npx rimraf -- hooks node_modules platforms package-lock.json && npm i && npx rimraf -- package-lock.json"
+    "XXXXXXXXXXX SCHEMATICS XXXXXXXXXXXXXXXXXXX": "",
+    "sch:run": "nx workspace-schematic",
+    "sch:add:nx": "nx add --dev @nrwl/angular @nrwl/web @nrwl/nest @nrwl/node @nrwl/cli @nrwl/cypress @nrwl/jest @nrwl/linter @nrwl/schematics",
+    "sch:add:ngrx": "nx add @ngrx/schematics --dev && yarn add @ngrx/{store,effects,entity,store-devtools}",
+    "sch:add:material": "nx add @angular/material && ng add @angular/cdk",
+    "sch:add:ngx-formly": "nx add @ngx-formly/schematics --ui-theme=material",
+    "sch:list": "nx workspace-schematic list-schematics",
+    "sch:list:ngrx": "schematics --list-schematics @ngrx/schematics"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.0",
     "@angular/common": "^8.2.0",
@@ -66,50 +114,87 @@
     "nativescript-ngx-fonticon": "^4.2.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.803.3",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@nrwl/angular": "~8.8.0",
+    "@nrwl/cypress": "8.10.0",
+    "@nrwl/jest": "8.10.0",
     "@nrwl/workspace": "8.10.0",
     "@nstudio/angular": "8.1.1",
     "@nstudio/electron": "8.1.1",
     "@nstudio/electron-angular": "8.1.1",
+    "@nstudio/nativescript": "8.1.1",
+    "@nstudio/nativescript-angular": "8.1.1",
+    "@nstudio/web": "8.1.1",
     "@nstudio/web-angular": "8.1.1",
     "@nstudio/xplat": "^8.1.1",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "eslint": "6.1.0",
-    "prettier": "1.18.2",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.5.3",
-    "@nstudio/web": "8.1.1",
-    "@angular/compiler-cli": "^8.2.0",
-    "@angular/language-service": "^8.2.0",
-    "@angular-devkit/build-angular": "^0.803.3",
-    "codelyzer": "~5.1.0",
-    "jest-preset-angular": "7.0.0",
-    "@nrwl/jest": "8.10.0",
-    "jest": "24.1.0",
+    "@storybook/addon-actions": "^5.2.4",
+    "@storybook/addon-backgrounds": "^5.2.4",
+    "@storybook/addon-links": "^5.2.4",
+    "@storybook/addon-notes": "^5.2.4",
+    "@storybook/addon-storysource": "^5.2.4",
+    "@storybook/addons": "^5.2.4",
+    "@storybook/angular": "^5.2.4",
+    "@storybook/cli": "^5.2.4",
     "@types/jest": "24.0.9",
-    "ts-jest": "24.0.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.1.0",
+    "commitizen": "^4.0.3",
     "cypress": "3.6.1",
-    "@nrwl/cypress": "8.10.0",
+    "dotenv": "6.2.0",
     "electron": "^7.0.1",
     "electron-builder": "^20.44.4",
-    "electron-rebuild": "~1.8.6",
     "electron-installer-dmg": "~3.0.0",
     "electron-packager": "~14.1.0",
+    "electron-rebuild": "~1.8.6",
     "electron-reload": "~1.5.0",
     "electron-store": "~5.1.0",
     "electron-updater": "~4.2.0",
-    "npm-run-all": "^4.1.5",
-    "wait-on": "~3.3.0",
-    "@nstudio/nativescript-angular": "8.1.1",
-    "@nstudio/nativescript": "8.1.1",
+    "eslint": "6.1.0",
+    "husky": "^3.0.9",
+    "jest": "24.1.0",
+    "jest-preset-angular": "7.0.0",
     "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "1.18.2",
     "terser-webpack-plugin": "~2.2.0",
-    "tns-platform-declarations": "~6.2.0"
+    "tns-platform-declarations": "~6.2.0",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.5.3",
+    "wait-on": "~3.3.0"
+  },
+  "optionalDependencies": {
+    "@compodoc/compodoc": "^1.1.11",
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/commit-analyzer": "^6.3.0",
+    "@semantic-release/git": "^7.0.16",
+    "@semantic-release/npm": "^5.2.0",
+    "@semantic-release/release-notes-generator": "^7.3.0",
+    "cz-conventional-changelog": "^3.0.2",
+    "lint-staged": "^9.4.2",
+    "pretty-quick": "^2.0.0",
+    "semantic-release": "^15.13.24",
+    "semantic-release-cli": "^5.2.1",
+    "standard-version": "^7.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "xplat": {
     "prefix": "oh-my-repo",
     "framework": "angular"
+  },
+  "[!delete this bracket to npm-fix audit issues!]resolutions": {
+    "http-proxy-agent": "3.0.0"
+  },
+  "peerDependenciesMeta": {},
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
