--- a/package.json
+++ b/package.json
@@ -33,20 +33,18 @@
     "clean:dist": "rimraf dist",
     "clean": "npx rimraf -- hooks node_modules package-lock.json && npm i",
     "clean:nativescript-mobile": "cd apps/nativescript-mobile && npx rimraf -- hooks node_modules platforms package-lock.json && npm i && npx rimraf -- package-lock.json",
-    "XXXXXXXXXXX RELEASE XXXXXXXXXXXXXXXXXXXXXXX": "",
-    "semantic-release": "semantic-release",
     "XXXXXXXXXXX COMMIT XXXXXXXXXXXXXXXXXXXXXXX": "",
     "repo:commit": "git-cz",
     "commit:init": "commitizen init cz-conventional-changelog --save-dev --save-exact",
     "commit:update": "git update-index --again",
     "XXXXXXXXXXX DOCUMENTATION XXXXXXXXXXXXXXXXX": "Generate documentation",
     "docs:gen": "compodoc -p tsconfig.json -d dist/docs",
-    "docs:serve": "compodoc -s -d dist/docs",
-    "doc:build:serve": "compodoc -p tsconfig.json -d dist/docs -s",
+    "docs:serve": "compodoc -s -d dist/docs --port 6005",
+    "docs:build:serve": "compodoc -p tsconfig.json -d dist/docs -s --port 6005",
     "XXXXXXXXXXX TESTING XXXXXXXXXXXXXXXXXXXXXXX": "",
     "coverage": "codecov",
-    "test": "npm run postinstall.web && nx test",
-    "e2e": "npm run postinstall.web && nx e2e",
+    "test": "yarn postinstall.web && nx test",
+    "e2e": "yarn postinstall.web && nx e2e",
     "XXXXXXXXXXX AFFECTED XXXXXXXXXXXXXXXXXXXXXX": "",
     "affected": "nx affected",
     "affected:apps": "nx affected:apps",
@@ -60,29 +58,32 @@
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
-    "format:check-rules": "tslint-config-prettier-check tslint.json",
     "format:all": "prettier --write \"**/*.*(json|js|jsx|ts|tsx)\"",
     "format:fix": "pretty-quick --staged",
     "format:test": "prettier --list-different",
     "XXXXXXXXXXX LINTING XXXXXXXXXXXXXXXXXXXXXX": "",
     "lint": "nx workspace-lint && ng lint",
+    "lint:check": "tslint-config-prettier-check tslint.json",
+    "lint:fix": "prettier-tslint fix apps/**/*.ts && prettier-tslint fix libs/**/*.ts",
     "XXXXXXXXXXX BUILD XXXXXXXXXXXXXXXXXXXXXXXXX": "",
     "build:sb": "build-storybook",
-    "build": "npm run postinstall.web && nx build web-desktop",
-    "build.electron.desktop": "npm run prepare.electron.desktop && ng build electron-desktop --prod --base-href ./",
-    "build.electron.desktop.local": "npm run build.electron.desktop && electron dist/apps/electron-desktop",
-    "build.electron.desktop.linux": "npm run build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --linux",
-    "build.electron.desktop.windows": "npm run build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --windows",
-    "build.electron.desktop.mac": "npm run build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --mac",
+    "build": "yarn postinstall.web && nx build web-desktop",
+    "build.electron.desktop": "yarn prepare.electron.desktop && ng build electron-desktop --prod --base-href ./",
+    "build.electron.desktop.local": "yarn build.electron.desktop && electron dist/apps/electron-desktop",
+    "build.electron.desktop.linux": "yarn build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --linux",
+    "build.electron.desktop.windows": "yarn build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --windows",
+    "build.electron.desktop.mac": "yarn build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --mac",
     "XXXXXXXXXXX DEVELOPMENT XXXXXXXXXXXXXXXXXXX": "",
     "serve.electron.desktop.target": "nx serve electron-desktop",
     "serve.electron.desktop": "wait-on http-get://localhost:4200/ && electron apps/electron-desktop/src --serve",
-    "start.electron.desktop": "npm run prepare.electron.desktop && npm-run-all -p serve.electron.desktop.target serve.electron.desktop",
-    "start": "npm run postinstall.web && nx serve web-desktop",
+    "start.electron.desktop": "yarn prepare.electron.desktop && npm-run-all -p serve.electron.desktop.target serve.electron.desktop",
+    "start": "yarn postinstall.web && nx serve web-desktop",
     "start.web.browser": "nx serve web-browser",
     "start.nativescript.mobile.ios": "cd apps/nativescript-mobile && tns run ios --emulator",
     "start.nativescript.mobile.android": "cd apps/nativescript-mobile && tns run android --emulator",
     "start.nativescript.mobile.preview": "cd apps/nativescript-mobile && tns preview",
+    "dev:storybook": "start-storybook -p 6006",
+    "build:storybook": "build-storybook",
     "XXXXXXXXXXX SCHEMATICS XXXXXXXXXXXXXXXXXXX": "",
     "sch:run": "nx workspace-schematic",
     "sch:add:nx": "nx add --dev @nrwl/angular @nrwl/web @nrwl/nest @nrwl/node @nrwl/cli @nrwl/cypress @nrwl/jest @nrwl/linter @nrwl/schematics",
@@ -101,24 +102,25 @@
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
-    "core-js": "^3.3.2",
-    "rxjs": "~6.5.3",
-    "zone.js": "~0.10.2",
-    "@oh-my-repo/scss": "file:libs/scss",
     "@ngx-translate/core": "~11.0.0",
     "@ngx-translate/http-loader": "~4.0.0",
-    "reflect-metadata": "^0.1.12",
-    "nativescript-theme-core": "^1.0.4",
-    "tns-core-modules": "~6.2.0",
+    "@oh-my-repo/scss": "file:libs/scss",
+    "core-js": "^3.3.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "nativescript-angular": "~8.20.0",
-    "nativescript-ngx-fonticon": "^4.2.0"
+    "nativescript-ngx-fonticon": "^4.2.0",
+    "nativescript-theme-core": "^1.0.4",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "~6.5.3",
+    "tns-core-modules": "~6.2.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.3",
     "@angular/compiler-cli": "^8.2.0",
     "@angular/language-service": "^8.2.0",
-    "@commitlint/cli": "^8.2.0",
-    "@commitlint/config-conventional": "^8.2.0",
+    "@babel/core": "^7.7.7",
     "@nrwl/angular": "~8.8.0",
     "@nrwl/cypress": "8.10.0",
     "@nrwl/jest": "8.10.0",
@@ -141,8 +143,9 @@
     "@storybook/cli": "^5.2.4",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "angular-tslint-rules": "^1.20.3",
+    "babel-loader": "^8.0.6",
     "codelyzer": "~5.1.0",
-    "commitizen": "^4.0.3",
     "cypress": "3.6.1",
     "dotenv": "6.2.0",
     "electron": "^7.0.1",
@@ -154,12 +157,16 @@
     "electron-store": "~5.1.0",
     "electron-updater": "~4.2.0",
     "eslint": "6.1.0",
-    "husky": "^3.0.9",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^3.0.3",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
+    "prettier-tslint": "^0.4.2",
+    "stylelint": "^12.0.1",
+    "stylelint-config-standard": "^19.0.0",
     "terser-webpack-plugin": "~2.2.0",
     "tns-platform-declarations": "~6.2.0",
     "ts-jest": "24.0.0",
@@ -169,17 +176,14 @@
     "wait-on": "~3.3.0"
   },
   "optionalDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@compodoc/compodoc": "^1.1.11",
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/commit-analyzer": "^6.3.0",
-    "@semantic-release/git": "^7.0.16",
-    "@semantic-release/npm": "^5.2.0",
-    "@semantic-release/release-notes-generator": "^7.3.0",
+    "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
+    "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "pretty-quick": "^2.0.0",
-    "semantic-release": "^15.13.24",
-    "semantic-release-cli": "^5.2.1",
     "standard-version": "^7.0.0",
     "tslint-config-prettier": "^1.18.0",
     "webpack-bundle-analyzer": "^3.6.0"
@@ -188,9 +192,7 @@
     "prefix": "oh-my-repo",
     "framework": "angular"
   },
-  "[!delete this bracket to npm-fix audit issues!]resolutions": {
-    "http-proxy-agent": "3.0.0"
-  },
+  "resolutions": {},
   "peerDependenciesMeta": {},
   "config": {
     "commitizen": {
