ci(init ci): testing ci initially
travis

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oh-my-repo",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "Oh my (mono) repo",
   "author": "Stefan Lenz <www.stefan.lenz@gmail.com>",
   "license": "MIT",
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "nx": "nx",
+    "build": "mkdir dist/ && echo 'Example distribution' > dist/index.html",
     "XXXXXXXXXXX HOOKS XXXXXXXXXXXXXXXXXXXXXXXX": "",
     "offpreinstall": "node -e '!process.env.npm_config_user_agent.startsWith(\"yarn/\") &&! console.log(\"ONLY YARN ALLOWED!\") && process.exit(1)'",
     "pre-build": "rimraf dist coverage",
@@ -67,7 +68,7 @@
     "lint:fix": "prettier-tslint fix apps/**/*.ts && prettier-tslint fix libs/**/*.ts",
     "XXXXXXXXXXX BUILD XXXXXXXXXXXXXXXXXXXXXXXXX": "",
     "build:sb": "build-storybook",
-    "build": "yarn postinstall.web && nx build web-desktop",
+    "build:web-desktop": "yarn postinstall.web && nx build web-desktop",
     "build.electron.desktop": "yarn prepare.electron.desktop && ng build electron-desktop --prod --base-href ./",
     "build.electron.desktop.local": "yarn build.electron.desktop && electron dist/apps/electron-desktop",
     "build.electron.desktop.linux": "yarn build.electron.desktop && cd dist/apps/electron-desktop && npx electron-builder build --linux",
@@ -91,7 +92,8 @@
     "sch:add:material": "nx add @angular/material && ng add @angular/cdk",
     "sch:add:ngx-formly": "nx add @ngx-formly/schematics --ui-theme=material",
     "sch:list": "nx workspace-schematic list-schematics",
-    "sch:list:ngrx": "schematics --list-schematics @ngrx/schematics"
+    "sch:list:ngrx": "schematics --list-schematics @ngrx/schematics",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "@angular/animations": "^8.2.0",
@@ -133,6 +135,12 @@
     "@nstudio/web": "8.1.1",
     "@nstudio/web-angular": "8.1.1",
     "@nstudio/xplat": "^8.1.1",
+    "@semantic-release/changelog": "^3.0.6",
+    "@semantic-release/commit-analyzer": "^7.0.0",
+    "@semantic-release/git": "^8.0.0",
+    "@semantic-release/github": "^6.0.0",
+    "@semantic-release/npm": "^6.0.0",
+    "@semantic-release/release-notes-generator": "^7.3.5",
     "@storybook/addon-actions": "^5.2.4",
     "@storybook/addon-backgrounds": "^5.2.4",
     "@storybook/addon-links": "^5.2.4",
@@ -156,6 +164,7 @@
     "electron-reload": "~1.5.0",
     "electron-store": "~5.1.0",
     "electron-updater": "~4.2.0",
+    "env-cmd": "^10.0.1",
     "eslint": "6.1.0",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
@@ -165,6 +174,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "prettier-tslint": "^0.4.2",
+    "semantic-release": "^16.0.0",
+    "semantic-release-cli": "^5.2.3",
     "stylelint": "^12.0.1",
     "stylelint-config-standard": "^19.0.0",
     "terser-webpack-plugin": "~2.2.0",
