chore(dist): gh-pages get populated with dist/{docs,storybook}

--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "scripts": {
     "nx": "nx",
-    "build": "mkdir dist/ && echo 'Example distribution' > dist/index.html",
+    "build": "docs:build && build:sb",
     "XXXXXXXXXXX HOOKS XXXXXXXXXXXXXXXXXXXXXXXX": "",
     "offpreinstall": "node -e '!process.env.npm_config_user_agent.startsWith(\"yarn/\") &&! console.log(\"ONLY YARN ALLOWED!\") && process.exit(1)'",
     "pre-build": "rimraf dist coverage",
-    "start.web.desktop": "npm run postinstall.web && nx serve web-desktop",
+    "start.web.desktop": "yarn postinstall.web && nx serve web-desktop",
     "postinstall": "electron-rebuild install-app-deps",
     "postinstall.electron": "node tools/electron/postinstall",
     "postinstall.web": "node tools/web/postinstall",
-    "prepare.electron.desktop": "npm run postinstall.electron && tsc -p apps/electron-desktop/tsconfig.json",
+    "prepare.electron.desktop": "yarn postinstall.electron && tsc -p apps/electron-desktop/tsconfig.json",
     "XXXXXXXXXXX COMMON XXXXXXXXXXXXXXXXXXXXXXXX": "",
     "update:all": "nx update --all",
     "update:check": "nx update",
@@ -67,7 +67,7 @@
     "lint:check": "tslint-config-prettier-check tslint.json",
     "lint:fix": "prettier-tslint fix apps/**/*.ts && prettier-tslint fix libs/**/*.ts",
     "XXXXXXXXXXX BUILD XXXXXXXXXXXXXXXXXXXXXXXXX": "",
-    "build:sb": "build-storybook",
+    "build:sb": "build-storybook --output-dir dist/storybook",
     "build:web-desktop": "yarn postinstall.web && nx build web-desktop",
     "build.electron.desktop": "yarn prepare.electron.desktop && ng build electron-desktop --prod --base-href ./",
     "build.electron.desktop.local": "yarn build.electron.desktop && electron dist/apps/electron-desktop",
@@ -84,7 +84,6 @@
     "start.nativescript.mobile.android": "cd apps/nativescript-mobile && tns run android --emulator",
     "start.nativescript.mobile.preview": "cd apps/nativescript-mobile && tns preview",
     "dev:storybook": "start-storybook -p 6006",
-    "build:storybook": "build-storybook",
     "XXXXXXXXXXX SCHEMATICS XXXXXXXXXXXXXXXXXXX": "",
     "sch:run": "nx workspace-schematic",
     "sch:add:nx": "nx add --dev @nrwl/angular @nrwl/web @nrwl/nest @nrwl/node @nrwl/cli @nrwl/cypress @nrwl/jest @nrwl/linter @nrwl/schematics",
