fix(scripts): fixed build of packagejson scripts (build docs, storybook)

--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   },
   "scripts": {
     "nx": "nx",
-    "build": "docs:build && build:sb",
+    "build": "yarn clean:dist && yarn docs:gen && yarn build:sb",
     "XXXXXXXXXXX HOOKS XXXXXXXXXXXXXXXXXXXXXXXX": "",
     "offpreinstall": "node -e '!process.env.npm_config_user_agent.startsWith(\"yarn/\") &&! console.log(\"ONLY YARN ALLOWED!\") && process.exit(1)'",
-    "pre-build": "rimraf dist coverage",
-    "start.web.desktop": "yarn postinstall.web && nx serve web-desktop",
+    "pre-build": "yarn clean",
     "postinstall": "electron-rebuild install-app-deps",
     "postinstall.electron": "node tools/electron/postinstall",
     "postinstall.web": "node tools/web/postinstall",
@@ -32,7 +31,7 @@
     "XXXXXXXXXXX CLEANING XXXXXXXXXXXXXXXXXXXXXX": "",
     "clean:nm": "rimraf node_modules",
     "clean:dist": "rimraf dist",
-    "clean": "npx rimraf -- hooks node_modules package-lock.json && npm i",
+    "clean": "yarn rimraf -- hooks node_modules package-lock.json && npm i",
     "clean:nativescript-mobile": "cd apps/nativescript-mobile && npx rimraf -- hooks node_modules platforms package-lock.json && npm i && npx rimraf -- package-lock.json",
     "XXXXXXXXXXX COMMIT XXXXXXXXXXXXXXXXXXXXXXX": "",
     "repo:commit": "git-cz",
@@ -42,6 +41,9 @@
     "docs:gen": "compodoc -p tsconfig.json -d dist/docs",
     "docs:serve": "compodoc -s -d dist/docs --port 6005",
     "docs:build:serve": "compodoc -p tsconfig.json -d dist/docs -s --port 6005",
+    "XXXXXXXXXXX STORYBOOK XXXXXXXXXXXXXXXXXXXXXXX": "",
+    "build:sb": "build-storybook --output-dir dist/storybook",
+    "dev:storybook": "start-storybook -p 6006",
     "XXXXXXXXXXX TESTING XXXXXXXXXXXXXXXXXXXXXXX": "",
     "coverage": "codecov",
     "test": "yarn postinstall.web && nx test",
@@ -67,7 +69,6 @@
     "lint:check": "tslint-config-prettier-check tslint.json",
     "lint:fix": "prettier-tslint fix apps/**/*.ts && prettier-tslint fix libs/**/*.ts",
     "XXXXXXXXXXX BUILD XXXXXXXXXXXXXXXXXXXXXXXXX": "",
-    "build:sb": "build-storybook --output-dir dist/storybook",
     "build:web-desktop": "yarn postinstall.web && nx build web-desktop",
     "build.electron.desktop": "yarn prepare.electron.desktop && ng build electron-desktop --prod --base-href ./",
     "build.electron.desktop.local": "yarn build.electron.desktop && electron dist/apps/electron-desktop",
@@ -79,11 +80,11 @@
     "serve.electron.desktop": "wait-on http-get://localhost:4200/ && electron apps/electron-desktop/src --serve",
     "start.electron.desktop": "yarn prepare.electron.desktop && npm-run-all -p serve.electron.desktop.target serve.electron.desktop",
     "start": "yarn postinstall.web && nx serve web-desktop",
+    "start.web.desktop": "yarn postinstall.web && nx serve web-desktop",
     "start.web.browser": "nx serve web-browser",
     "start.nativescript.mobile.ios": "cd apps/nativescript-mobile && tns run ios --emulator",
     "start.nativescript.mobile.android": "cd apps/nativescript-mobile && tns run android --emulator",
     "start.nativescript.mobile.preview": "cd apps/nativescript-mobile && tns preview",
-    "dev:storybook": "start-storybook -p 6006",
     "XXXXXXXXXXX SCHEMATICS XXXXXXXXXXXXXXXXXXX": "",
     "sch:run": "nx workspace-schematic",
     "sch:add:nx": "nx add --dev @nrwl/angular @nrwl/web @nrwl/nest @nrwl/node @nrwl/cli @nrwl/cypress @nrwl/jest @nrwl/linter @nrwl/schematics",
